--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,33 @@
-h1 {
-  text-align: center;
-  font-size: 5vw;
+body {
+  background: url("images/background.jpg") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
-div {
-  display: block;
+.logo {
+  max-width: 50%;
 }
 
 @media screen and (max-width: 600px) {
   .container {
     width: 100%;
   }
+  .logo {
+    width: 50%;
+  }
+}
+
+p {
+  color: white;
 }
 
 .container {
     align-content: center;
     height: 60%;
+    margin-left: 5%;
+    margin-right: 5%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
@@ -26,15 +38,52 @@ div {
     text-align: center;
     text-decoration: none;
     color: black;
-    padding: 25%;
-    border: 1px solid black;
+    border: 1px solid white;
   }
 
-  .cell img, .cell-empty img {
+  .cell img {
     width: 100%;
-    height: auto;
+    height: 100%;
   }
 
+.free {
+    margin-top: 25%;
+    margin-bottom: 25%;
+    width: 25%;
+  }
+
+/* Zoom every pixel on hover */
   .cell:hover, .cell-empty:hover {
     background-color: black;
+    -ms-transform: scale(1.2); /* IE 9 */
+    -webkit-transform: scale(1.2); /* Safari 3-8 */
+    transform: scale(1.2); 
   }
+
+/* Buttons style */
+a.button3 {
+    float: right;
+    display: inline-block;
+    padding: 0.3em 1.2em;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 2em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    color:#FFFFFF;
+    background-color:#4eb5f1;
+    text-align:center;
+    transition: all 0.2s;
+}
+
+a.button3:hover{
+    background-color:#4095c6;
+}
+
+  @media all and (max-width:30em){
+   a.button3{
+    display:block;
+    margin:0.2em auto;
+  }
+}
