--- a/public/css/profile_style.css
+++ b/public/css/profile_style.css
@@ -50,3 +50,51 @@ a.button3:hover{
     margin:0.2em auto;
   }
 }
+
+/* Profile info styles */
+
+
+.tabContainer{ 
+  width: 100%;
+  height: 350px;
+}
+
+
+.tabContainer .buttonContainer {
+  height: 15%;
+
+}
+
+.tabContainer .buttonContainer button {
+  border-radius: 15px 15px 0px 0px;
+  width: 25%;
+  height: 100%;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 10px;
+  font-family: sans-serif;
+  font-size: 15px;
+  background-color: #eee;
+}
+
+.tabContainer .buttonContainer button:hover {
+  background-color: #d7d4d4;
+
+}
+
+
+.tabContainer .tabPanel {
+  height: 85%;
+  background-color: #99989869;
+  color: white;
+  text-align: center;
+  padding-top: 105px;
+  box-sizing: border-box;
+  font-family: sans-serif;
+  font-size: 22px;
+  display: none;
+  
+  border-radius: 0px 15px 15px 15px;
+}
