--- a/public/css/profile_style.css
+++ b/public/css/profile_style.css
@@ -17,6 +17,10 @@ body {
     .logo {
       width: 50%;
     }
+    .tabContainer{
+
+      width: 90%;
+    }
   }
   
   p {
@@ -54,15 +58,14 @@ a.button3:hover{
 /* Profile info styles */
 
 
-.tabContainer{ 
-  width: 100%;
+.tabContainer{
+  margin-left: 15%;
   height: 350px;
 }
 
 
 .tabContainer .buttonContainer {
   height: 15%;
-
 }
 
 .tabContainer .buttonContainer button {
@@ -86,15 +89,40 @@ a.button3:hover{
 
 
 .tabContainer .tabPanel {
-  height: 85%;
+  height: 80%;
+  width: 80%;
   background-color: #99989869;
   color: white;
   text-align: center;
-  padding-top: 105px;
+  padding-top: 2%;
   box-sizing: border-box;
   font-family: sans-serif;
   font-size: 22px;
   display: none;
   
   border-radius: 0px 15px 15px 15px;
+}
+
+.profilePic {
+  float: left;
+  margin-left: 10%;
+  width: 15%;
+  height: auto;
+
+}
+
+.info {
+  float: left;
+  margin-top: 2%;
+  margin-left: 9%;
+  text-align-last: left;
+}
+
+
+/* for editing pixels */
+
+
+.cell img {
+  width: 10%;
+  height: auto;
 }
