--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,6 +31,7 @@ section {
   .logo {
     width: 50%;
   }
+
 }
 
 p {
@@ -55,9 +56,13 @@ p {
     border: 1px solid white;
   }
 
+  .cell {
+    background-color: black;
+  }
+
   .cell img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
   }
 
 .free {
