--- a/public/css/reg_style.css
+++ b/public/css/reg_style.css
@@ -102,3 +102,13 @@ legend {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;      
   }
+
+  .errors{
+    color: #D8000C;
+    background-color: #FFBABA;
+    display: block;
+    text-align: center;
+    margin-top: -5%;
+    border: 1px solid;
+    padding: 15px 10px 15px 50px;
+  }
